--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-modal.css" rel="stylesheet">
     <link href="css/datepicker.css" rel="stylesheet">
+    <link href="css/bootstrap-datetimepicker.css" rel="stylesheet">
     
 </head>
 
@@ -48,6 +49,7 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/bootstrap-datepicker.js"></script>
+<script src="lib/bootstrap-datetimepicker.js"></script>
 
 
 
