--- a/public/tpl/SessionsView.html
+++ b/public/tpl/SessionsView.html
@@ -14,7 +14,7 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Modalidade</th>
+                    <th>Modalidade de Atendimento</th>
                     <th>Data Agendamento Inicio</th>
                     <th>Data Agendamento Fim</th>
                     <th>Aluno</th>
