--- a/public/tpl/SessionView.html
+++ b/public/tpl/SessionView.html
@@ -45,10 +45,10 @@
                     </div>
                     <article style="float: left; width: 48%">
                     <div class="control-group">
-                        <label for="grapes" class="control-label">Data De Agendamento Início:</label>
+                        <label for="grapes" class="control-label">Data de Agendamento Início:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateSchedulingStart" name="dateSchedulingStart" value="<%= dateSchedulingStart === null ? '' : new Date(dateSchedulingStart).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" />
+                            <input type="text" class="form-control" id="dateSchedulingStart" name="dateSchedulingStart" value="<%= dateSchedulingStart === null ? '' : new Date(dateSchedulingStart).toLocaleDateString() %>" data-date-format="dd/mm/yyyy hh:ii">
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         <label for="grapes" class="control-label">Data de Agendamento Fim:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateSchedulingEnd" name="dateSchedulingEnd" value="<%= dateSchedulingEnd === null ? '' : new Date(dateSchedulingEnd).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" />
+                            <input type="text" class="form-control" id="dateSchedulingEnd" name="dateSchedulingEnd" value="<%= dateSchedulingEnd === null ? '' : new Date(dateSchedulingEnd).toLocaleDateString() %>" data-date-format="dd/mm/yyyy hh:ii" />
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <label for="grapes" class="control-label">Data Início:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateStart" name="dateStart" value="<%= dateStart === null ? '' : new Date(dateStart).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" />
+                            <input type="text" class="form-control" id="dateStart" name="dateStart" value="<%= dateStart === null ? '' : new Date(dateStart).toLocaleDateString() %>" data-date-format="dd/mm/yyyy hh:ii" />
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                         <label for="grapes" class="control-label">Data Fim:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateEnd" name="dateEnd" value="<%= dateEnd === null ? '' : new Date(dateEnd).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" />
+                            <input type="text" class="form-control" id="dateEnd" name="dateEnd" value="<%= dateEnd === null ? '' : new Date(dateEnd).toLocaleDateString() %>" data-date-format="dd/mm/yyyy hh:ii" />
                             <span class="help-inline"></span>
                         </div>
                     </div>
