--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <link href="css/bootstrap-modal.css" rel="stylesheet">
     <link href="css/datepicker.css" rel="stylesheet">
     <link href="css/bootstrap-datetimepicker.css" rel="stylesheet">
+    <link href="css/fullcalendar.css" rel="stylesheet">
+    <link href="css/fullcalendar.print.css" rel="stylesheet">
     
 </head>
 
@@ -40,7 +42,6 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="lib/jquery-1.8.2.min.js"></script>
-
 <script src="lib/bootstrap.js"></script>
 <script src="lib/bootstrap-modal.js"></script>
 <script src="lib/bootstrap-transition.js"></script>
@@ -57,6 +58,7 @@
 <script src="js/models/models.js"></script>
 <script src="js/views/header.js"></script>
 <script src="js/views/home.js"></script>
+<script src="js/views/calendar.js"></script>
 <script src="js/views/winelist.js"></script>
 <script src="js/views/winedetails.js"></script>
 <script src="js/views/studentlist.js"></script>
