--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
 <script src="lib/backbone-min.js"></script>
 <script src="lib/bootstrap-datepicker.js"></script>
 <script src="lib/bootstrap-datetimepicker.js"></script>
+<script src="lib/fullcalendar.js"></script>
 
 
 
