--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <link href="css/bootstrap-modal.css" rel="stylesheet">
     <link href="css/datepicker.css" rel="stylesheet">
     <link href="css/bootstrap-datetimepicker.css" rel="stylesheet">
-    <link href="css/fullcalendar.css" rel="stylesheet">
-    <link href="css/fullcalendar.print.css" rel="stylesheet">
+    <link href='css/fullcalendar.css' rel='stylesheet' />
+    <link href='css/fullcalendar.print.css' rel='stylesheet' media='print' />
     
 </head>
 
@@ -31,7 +31,6 @@
 <div class="container">
     <div class="row-fluid">
         <div id="content" class="span12>">
-
         </div>
     </div>
 
@@ -51,7 +50,7 @@
 <script src="lib/backbone-min.js"></script>
 <script src="lib/bootstrap-datepicker.js"></script>
 <script src="lib/bootstrap-datetimepicker.js"></script>
-<script src="lib/fullcalendar.js"></script>
+<script src='lib/fullcalendar.js'></script>
 
 
 
@@ -89,3 +88,6 @@
 
 </body>
 </html>
+
+
+
