--- a/public/tpl/CalendarView.html
+++ b/public/tpl/CalendarView.html
@@ -1,6 +1,25 @@
-﻿<style>
-	body {
-		margin-top: 40px;
-		}
-</style>
+﻿<legend>Agenda</legend>
+<div class="row">
+  <div class="col-lg-5" style="width: 38%">
+    <div class="control-group">
+                        <label for="name" class="control-label">Aluno:</label>
+                        <!-- DIV ALUNOS -->
+                        <div id="divAlunos" class="controls">
+                        </div>
+                    </div>
+  </div><!-- /.col-lg-6 -->
+  <div class="col-lg-5">
+    <div class="control-group">
+                        <label for="name" class="control-label">Professor:</label>
+                        <!-- DIV PROFESSORES -->
+                        <div id="divProfessores" class="controls">
+                        </div>
+    </div>
+  </div><!-- /.col-lg-6 -->
+</div><!-- /.row -->
+
+
+<br/>
 <div id='calendar'></div>
+
+
