--- a/public/tpl/PatientView.html
+++ b/public/tpl/PatientView.html
@@ -79,6 +79,7 @@
 
                         <div class="controls">
                             <select class="form-control" id="maritalStatus" name="maritalStatus" value="<%= maritalStatus %>" >
+                                <option></option>
                                 <option <%= maritalStatus === 'CASADO' ? 'selected' : '' %>>CASADO</option>
                                 <option <%= maritalStatus === 'SOLTEIRO' ? 'selected' : '' %>>SOLTEIRO</option>
                                 <option <%= maritalStatus === 'DIVORCIADO' ? 'selected' : '' %>>DIVORCIADO</option>
@@ -116,7 +117,7 @@
                         <label for="grapes" class="control-label">Data de Nascimento:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateBirth" name="dateBirth" value="<%= dateBirth === null ? '' : new Date(dateBirth).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" />
+                            <input type="text" class="form-control" id="dateBirth" name="dateBirth" value="<%= dateBirth === null ? '' : new Date(dateBirth).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" readonly />
                             <span class="help-inline"></span>
                         </div>
                     </div>
