--- a/public/tpl/TreatmentView.html
+++ b/public/tpl/TreatmentView.html
@@ -13,6 +13,7 @@
 
                         <div class="controls">
                             <select class="form-control" id="serviceArea" name="serviceArea" value="<%= serviceArea %>">
+                                <option></option>
                                 <option <%= serviceArea === 'NEURO ADULTO' ? 'selected' : '' %>>NEURO ADULTO</option>
                                 <option <%= serviceArea === 'NEURO PEDIATRIA' ? 'selected' : '' %>>NEURO PEDIATRIA</option>
                                 <option <%= serviceArea === 'ORTOPEDIA TRAUMATOLOGIA' ? 'selected' : '' %>>ORTOPEDIA TRAUMATOLOGIA</option>
