ajustes sessao e tratamento

--- a/public/tpl/SessionsView.html
+++ b/public/tpl/SessionsView.html
@@ -13,10 +13,11 @@
         <table id="tbSessions" class="table table-hover">
             <thead>
                 <tr>
-                    <th>Modalidade de Atendimento</th>
+                    <th>Tipo de Sessão</th>
                     <th>Data Agendamento Inicio</th>
                     <th>Data Agendamento Fim</th>
                     <th>Aluno</th>
+                    <th>Situação</th>
                  </tr>
              </thead>            <tbody>
             </tbody>
