--- a/public/tpl/SessionView.html
+++ b/public/tpl/SessionView.html
@@ -58,15 +58,15 @@
                         <label for="grapes" class="control-label">Data de Agendamento Fim:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateSchedulingEnd" name="dateSchedulingEnd" value="<%= dateSchedulingEnd === null ? '' : formattedDateTime(dateSchedulingEnd) %>" data-date-format="dd/mm/yyyy hh:ii" readonly/>
+                            <input type="text" class="form-control" id="dateSchedulingEnd" name="dateSchedulingEnd" value="<%= dateSchedulingEnd === null ? '' : formattedDateTime(dateSchedulingEnd) %>" data-date-format="dd/mm/yyyy hh:ii" disabled/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
                     </article>
                     <article style="float: left; width: 100%; <%= _id === null ? 'display: none' : '' %>" >
                         <input type="checkbox" id="canceledSession" style="display: none" name="canceledSession" <%= canceledSession ? 'checked="checked"' : '' %> >
-                        <button type="button" class="btn btn-large" id="btnSessaoCancelada" name="canceledSession" style="width: 100%; margin-top: 25px; <%= canceledSession ? '' : 'display: none' %>">Esta Sessão foi Cancelada !</button>
-                        <button type="button" id="btnSessaoRealizada" name="everHeld" <%= everHeld ? '' : 'onclick="realizarSessao(false);"' %> class=" btn"style="width: 100%; margin-top: 25px; <%= everHeld ? '' : 'display: none' %>">Sessão já Realizada !</button>
+                        <button type="button" class="btn btn-large" id="btnSessaoCancelada" name="canceledSession" <%= canceledSession ? '' : 'onclick="cancelarSessao(false);"' %> style="width: 100%; margin-top: 25px; <%= canceledSession ? '' : 'display: none' %>">Sessão Cancelada !</button>
+                        <button type="button" id="btnSessaoRealizada" name="everHeld" <%= everHeld ? '' : 'onclick="realizarSessao(false);"' %> class=" btn"style="width: 100%; margin-top: 25px; <%= everHeld ? '' : 'display: none' %>">Sessão Realizada !</button>
                     </article>
                     <article style="float: left; width: 48%; <%= _id === null || canceledSession ? 'display: none' : '' %>">
                         <input type="checkbox" id="everHeld" style="display: none" name="everHeld" <%= everHeld ? 'checked="checked"' : '' %> >
@@ -176,6 +176,13 @@
             $('#btnSessaoNaoCancelada').hide();
             $('#btnSessaoRealizada').hide();
             $('#btnSessaoNaoRealizada').hide();
+        }
+        else {
+            $('#canceledSession').removeAttr('checked');
+            $('#btnSessaoCancelada').hide();
+            $('#btnSessaoNaoCancelada').show();
+            $('#btnSessaoRealizada').hide();
+            $('#btnSessaoNaoRealizada').show();
         }
     }
 
