--- a/public/tpl/TreatmentView.html
+++ b/public/tpl/TreatmentView.html
@@ -24,42 +24,6 @@
                             <span class="help-inline"></span>
                         </div>
                     </div>
-                    <article style="float: left; width: 100%">
-                    <div class="control-group">
-                        <label for="name" class="control-label">Diagnóstico:</label>
-
-                        <div class="controls">
-                            <textarea class="form-control" id="diagnosis" name="diagnosis" maxlength="3000" style="height: 278px"><%= diagnosis === null ? '' : diagnosis %></textarea>
-                            <span class="help-inline"></span>
-                        </div>
-                    </div>
-                    </article>
-                    </section>
-                    
-                    <section style="float: right; width: 48%;">
-                    <article style="float: left; width: 48%">
-                    <div class="control-group">
-                        <label for="grapes" class="control-label">Data Início:</label>
-
-                        <div class="controls">
-                            <input type="text" class="form-control" id="dateStart" name="dateStart" value="<%= dateStart === null ? '' : new Date(dateStart).toLocaleDateString() %>" readonly />
-                            <span class="help-inline"></span>
-                        </div>
-                    </div>
-                    </article>
-                    <article style="float: right; width: 49%">
-                    <div class="control-group">
-                        <label for="grapes" class="control-label">Data Fim:</label>
-
-                        <div class="controls">
-                            <input type="text" class="form-control" id="dateEnd" name="dateEnd" value="<%= dateEnd === null ? '' : new Date(dateEnd).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" readonly/>
-                            <span class="help-inline"></span>
-                        </div>
-                    </div>
-                    </article>
-                    </section>
-
-                    <section style="float: right; width: 48%;">
                     <article>
                     <div class="control-group">
                         <label for="grapes" class="control-label">Nome do Médico:</label>
@@ -100,12 +64,39 @@
                         <label for="name" class="control-label">Observações:</label>
 
                         <div class="controls">
-                            <textarea class="form-control" id="observations" name="observations" maxlength="3000"><%= observations === null ? '' : observations %></textarea>
+                            <textarea class="form-control" id="observations" name="observations" maxlength="3000" style="height: 97px"><%= observations === null ? '' : observations %></textarea>
                             <span class="help-inline"></span>
                         </div>
                     </div>
                     </article>
+                        <div id="divBotoes">
+                    <article style="float: left; width: 100%; <%= _id === null ? 'display: none' : '' %>" >
+                        <input type="checkbox" id="canceledTreatment" style="display: none" name="canceledTreatment" <%= canceledTreatment ? 'checked="checked"' : '' %> >
+                        <button type="button" class="btn btn-large" id="btnTratamentoCancelado" name="canceledTreatment" <%= canceledTreatment ? '' : 'onclick="cancelarTratamento(false);"' %> style="width: 100%; margin-top: 25px; <%= canceledTreatment ? '' : 'display: none' %>">Tratamento Cancelado !</button>
+                        <button type="button" id="btnTratamentoRealizado" name="treatmentPerformed" <%= treatmentPerformed ? '' : 'onclick="realizarTratamento(false);"' %> class=" btn"style="width: 100%; margin-top: 25px; <%= treatmentPerformed ? '' : 'display: none' %>">Tratamento Realizado !</button>
+                    </article>
+                    <article style="float: left; width: 48%; <%= _id === null || canceledTreatment ? 'display: none' : '' %>">
+                        <input type="checkbox" id="treatmentPerformed" style="display: none" name="treatmentPerformed" <%= treatmentPerformed ? 'checked="checked"' : '' %> >
+                        <button type="button" id="btnTratamentoNaoRealizado" name="treatmentPerformed" onclick="realizarTratamento(true);" class="btn btn-primary btn-large" style="width: 100%; margin-top: 25px; <%= treatmentPerformed ? 'display: none' : '' %>" >Tratamento já Realizado ?</button>
+                    </article>
+                    <article style="float: right; width: 48%; <%= _id === null || canceledTreatment ? 'display: none' : '' %>">
+                        <button type="button" id="btnTratamentoNaoCancelado" name="canceledTreatment" onclick="cancelarTratamento(true);" class="btn btn-primary btn-large" style="width: 100%; margin-top: 25px; <%= canceledTreatment || treatmentPerformed ? 'display: none' : '' %>">Cancelar Tratamento ?</button>
+                    </article>
+                            </div>
+                    </section>
+                   
 
+                    <section style="float: right; width: 48%;">
+                    <article style="float: left; width: 100%">
+                    <div class="control-group">
+                        <label for="name" class="control-label">Diagnóstico:</label>
+
+                        <div class="controls">
+                            <textarea class="form-control" id="diagnosis" name="diagnosis" maxlength="3000" style="height: 278px"><%= diagnosis === null ? '' : diagnosis %></textarea>
+                            <span class="help-inline"></span>
+                        </div>
+                    </div>
+                    </article>
                     <article style="float: left; width: 48%">
                     <div class="control-group">
                         <label for="grapes" class="control-label">Data Inclusão:</label>
@@ -132,9 +123,9 @@
 
         </fieldset>
         <div class="footer">
-            <button type="button" class="btn btn-primary btn-large save">Salvar</button>
+            <button type="button" class="btn btn-primary btn-large save"<%= canceledTreatment || treatmentPerformed ? 'style="display: none"' : '' %>>Salvar</button>
             <button type="button" class="btn" onclick="back();">Cancelar</button>
-            <button type="button" class="btn" data-toggle="modal" href="#delTreatment" <%= _id === null ? 'style="display: none"' : '' %>>Excluir</button>
+            <button type="button" id="btnExcluir" class="btn" data-toggle="modal" href="#delTreatment">Excluir</button>
             <button type="button" class="btn btn-primary btn-large " onclick="sessions();" <%= _id === null ? 'style="display: none"' : '' %> style="margin-left: 20px">Sessões</button>
         </div>
 
@@ -174,5 +165,39 @@
     function sessions()
     {
         window.location.assign(window.location.href + "/sessions");
+    }
+
+    function realizarTratamento(realizar) {
+
+        if (realizar) {
+            $('#treatmentPerformed').attr('checked', 'checked');
+            $('#btnTratamentoRealizado').show();
+            $('#btnTratamentoNaoRealizado').hide();
+            $('#btnTratamentoNaoCancelado').hide();
+        }
+        else {
+            $('#treatmentPerformed').removeAttr('checked');
+            $('#btnTratamentoRealizado').hide();
+            $('#btnTratamentoNaoRealizado').show();
+            $('#btnTratamentoNaoCancelado').show();
+        }
+    }
+
+    function cancelarTratamento(cancelar) {
+
+        if (cancelar) {
+            $('#canceledTreatment').attr('checked', 'checked');
+            $('#btnTratamentoCancelado').show();
+            $('#btnTratamentoNaoCancelado').hide();
+            $('#btnTratamentoRealizado').hide();
+            $('#btnTratamentoNaoRealizado').hide();
+        }
+        else {
+            $('#canceledTreatment').removeAttr('checked');
+            $('#btnTratamentoCancelado').hide();
+            $('#btnTratamentoNaoCancelado').show();
+            $('#btnTratamentoRealizado').hide();
+            $('#btnTratamentoNaoRealizado').show();
+        }
     }
 	</script>
