--- a/public/tpl/ManagerView.html
+++ b/public/tpl/ManagerView.html
@@ -184,8 +184,9 @@
 
         </fieldset>
         <div class="footer">
+            <button type="button" class="btn btn-primary" onclick="voltar();">Voltar à lista de gestores</button>
+            <button type="button" class="btn" onclick="novo();" style="margin-right: 20px">Novo</button>
             <button type="button" class="btn btn-primary btn-large save">Salvar</button>
-            <button type="button" class="btn" onclick="back();">Cancelar</button>
             <button type="button" class="btn" data-toggle="modal" href="#delUser" <%= _id === null ? 'style="display: none"' : '' %>>Excluir</button>
         </div>
 
@@ -222,4 +223,11 @@
         history.back(1);
     }
 
+    function voltar() {
+        window.location.assign(window.location.href.substring(0, window.location.href.indexOf("managers/")) + "managers");
+    }
+
+    function novo() {
+        window.location.assign(window.location.href.substring(0, window.location.href.indexOf("managers/")) + "managers/add");
+    }
 	</script>
