--- a/public/tpl/StudentView.html
+++ b/public/tpl/StudentView.html
@@ -13,7 +13,7 @@
                         <label for="name" class="control-label">Nome:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="name" name="name" value="<%= name == null ? '' : name %>" maxlength="100"/>
+                            <input type="text" class="form-control" id="name" name="name" value="<%= name == null ? '' : name %>" maxlength="100" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                         <label for="grapes" class="control-label">Endereço:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="address" name="address" value="<%= address == null ? '' : address %>" maxlength="100"/>
+                            <input type="text" class="form-control" id="address" name="address" value="<%= address == null ? '' : address %>" maxlength="100" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                         <label for="grapes" class="control-label">Número:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="number" name="number" value="<%= number == null ? '' : number %>"/>
+                            <input type="text" class="form-control" id="number" name="number" value="<%= number == null ? '' : number %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                         <label for="grapes" class="control-label">Matrícula:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="registration" name="registration" value="<%= registration == null ? '' : registration %>"/>
+                            <input type="text" class="form-control" id="registration" name="registration" value="<%= registration == null ? '' : registration %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <label for="grapes" class="control-label">CPF:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="cpf" name="cpf" value="<%= cpf === null ? '' : cpf %>"/>
+                            <input type="text" class="form-control" id="cpf" name="cpf" value="<%= cpf === null ? '' : cpf %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                         <label for="grapes" class="control-label">Email:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="mail" name="mail" value="<%= mail == null ? '' : mail %>" maxlength="100"/>
+                            <input type="text" class="form-control" id="mail" name="mail" value="<%= mail == null ? '' : mail %>" maxlength="100" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
