--- a/public/tpl/PatientView.html
+++ b/public/tpl/PatientView.html
@@ -13,7 +13,7 @@
                         <label for="name" class="control-label">Nome:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="name" name="name" value="<%= name == null ? '' : name %>" maxlength="100"/>
+                            <input type="text" class="form-control" id="name" name="name" value="<%= name == null ? '' : name %>" maxlength="100" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                         <label for="grapes" class="control-label">Endereço:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="address" name="address" value="<%= address == null ? '' : address %>" maxlength="100"/>
+                            <input type="text" class="form-control" id="address" name="address" value="<%= address == null ? '' : address %>" maxlength="100" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                         <label for="grapes" class="control-label">Número:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="number" name="number" value="<%= number == null ? '' : number %>"/>
+                            <input type="text" class="form-control" id="number" name="number" value="<%= number == null ? '' : number %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                         <label for="grapes" class="control-label">Bairro:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="district" name="district" value="<%= district === null ? '' : district %>"/>
+                            <input type="text" class="form-control" id="district" name="district" value="<%= district === null ? '' : district %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
 
                         <div class="controls">
                             <select class="form-control" id="maritalStatus" name="maritalStatus" value="<%= maritalStatus %>" >
-                                <option></option>
+                                <option  disabled="disabled" selected style='display:none'>Obrigatório</option>
                                 <option <%= maritalStatus === 'CASADO' ? 'selected' : '' %>>CASADO</option>
                                 <option <%= maritalStatus === 'SOLTEIRO' ? 'selected' : '' %>>SOLTEIRO</option>
                                 <option <%= maritalStatus === 'DIVORCIADO' ? 'selected' : '' %>>DIVORCIADO</option>
@@ -107,7 +107,7 @@
                         <label for="grapes" class="control-label">Telefone:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="phone1" name="phone1" value="<%= phone1 === null ? '' : phone1 %>"/>
+                            <input type="text" class="form-control" id="phone1" name="phone1" value="<%= phone1 === null ? '' : phone1 %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                         <label for="grapes" class="control-label">Data de Nascimento:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateBirth" name="dateBirth" value="<%= dateBirth === null ? '' : new Date(dateBirth).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" readonly />
+                            <input type="text" class="form-control" id="dateBirth" name="dateBirth" value="<%= dateBirth === null ? '' : new Date(dateBirth).toLocaleDateString() %>" data-date-format="dd/mm/yyyy" readonly  placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                         <label for="grapes" class="control-label">CPF:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="cpf" name="cpf" value="<%= cpf === null ? '' : cpf %>"/>
+                            <input type="text" class="form-control" id="cpf" name="cpf" value="<%= cpf === null ? '' : cpf %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
