--- a/public/tpl/SessionView.html
+++ b/public/tpl/SessionView.html
@@ -48,7 +48,7 @@
                         <label for="grapes" class="control-label">Data de Agendamento Início:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateSchedulingStart" name="dateSchedulingStart" value="<%= dateSchedulingStart === null ? '' : formattedDateTime(dateSchedulingStart) %>" data-date-format="dd/mm/yyyy hh:ii" readonly>
+                            <input type="text" class="form-control" id="dateSchedulingStart" name="dateSchedulingStart" value="<%= dateSchedulingStart === null ? '' : formattedDateTime(dateSchedulingStart) %>" data-date-format="dd/mm/yyyy hh:ii" readonly placeholder="Obrigatório">
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         <label for="grapes" class="control-label">Data de Agendamento Fim:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="dateSchedulingEnd" name="dateSchedulingEnd" value="<%= dateSchedulingEnd === null ? '' : formattedDateTime(dateSchedulingEnd) %>" data-date-format="dd/mm/yyyy hh:ii" disabled/>
+                            <input type="text" class="form-control" id="dateSchedulingEnd" name="dateSchedulingEnd" value="<%= dateSchedulingEnd === null ? '' : formattedDateTime(dateSchedulingEnd) %>" data-date-format="dd/mm/yyyy hh:ii" disabled placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
