--- a/public/tpl/StudentView.html
+++ b/public/tpl/StudentView.html
@@ -54,7 +54,7 @@
                         <label for="grapes" class="control-label">Bairro:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="district" name="district" value="<%= district === null ? '' : district %>"/>
+                            <input type="text" class="form-control" id="district" name="district" value="<%= district === null ? '' : district %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                         <label for="grapes" class="control-label">Telefone:</label>
 
                         <div class="controls">
-                            <input type="text" class="form-control" id="phone1" name="phone1" value="<%= phone1 === null ? '' : phone1 %>"/>
+                            <input type="text" class="form-control" id="phone1" name="phone1" value="<%= phone1 === null ? '' : phone1 %>" placeholder="Obrigatório"/>
                             <span class="help-inline"></span>
                         </div>
                     </div>
@@ -185,8 +185,8 @@
         </fieldset>
         <div class="footer">
             <button type="button" class="btn btn-primary" onclick="voltar();">Voltar à lista de alunos</button>
-            <button type="button" class="btn" onclick="novo();" style="margin-right: 20px">Novo</button>
-            <button type="button" class="btn btn-primary btn-large save">Salvar</button>
+            <button type="button" class="btn" onclick="novo();" <%= _id === null ? 'style="display: none"' : '' %>>Novo</button>
+            <button type="button" class="btn btn-primary btn-large save" style="margin-left: 20px">Salvar</button>
             <button type="button" class="btn" data-toggle="modal" href="#delUser" <%= _id === null ? 'style="display: none"' : '' %>>Excluir</button>
         </div>
 
