--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -11,7 +11,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="painel-menu"><a href="#panel">Painel de Atendimentos</a></li>
+            <li class="painel-menu"><a href="#">Painel de Atendimentos</a></li>
             <li class="calendar-menu"><a href="#calendar">Agenda</a></li>
             <li class="patients-menu"><a href="#patients">Pacientes</a></li>
             <li class="dropdown">
