--- a/public/tpl/HomeView.html
+++ b/public/tpl/HomeView.html
@@ -1,3 +1,12 @@
-﻿<div>
-    <!-- AQUI VEM O PAINEL -->
-</div>
+﻿<legend>Painel de Atendimentos</legend>
+<div class="row">
+  <div class="col-lg-5">
+    <div class="control-group">
+                        
+    </div>
+  </div><!-- /.col-lg-6 -->
+</div><!-- /.row -->
+
+
+<br/>
+<div id='painel'></div>
